# dclick-rpa-lib

./: README.md  build_upload.py  exemplo.ini  exemplo_ini  pyproject.toml
dclick/: __init__.py
dclick/cofre/: __init__.py  modelos.py  setup.py
dclick/dashboard/: __init__.py  setup.py
dclick/dealernet/: __init__.py  login.py
dclick/dealernet/cadastro/: __init__.py
dclick/dealernet/cadastro/nota_fiscal_eletronica/: __init__.py  setup.py
dclick/dealernet/financeiro/: __init__.py
dclick/dealernet/financeiro/titulos_a_pagar/: __init__.py  setup.py
dclick/dealernet/integracao/: __init__.py
dclick/dealernet/integracao/nota_fiscal_item_avulso/: __init__.py  setup.py
dclick/dealernet/menus/: __init__.py  setup.py
dclick/dealernet/produtos/: __init__.py
dclick/dealernet/produtos/nf_entrada_item_avulso/: __init__.py  setup.py
dclick/dealernet/produtos/nf_entrada_produto/: __init__.py  setup.py
dclick/dealernet/produtos/nf_saida_item_avulso/: __init__.py  setup.py
dclick/dealernet/produtos/nf_saida_produto/: __init__.py  setup.py
dclick/email/: __init__.py  email_simples.html  setup.py
dclick/erros/: __init__.py  modelo.py
dclick/erros/api/: __init__.py  setup.py
dclick/erros/arquivo/: __init__.py  setup.py
dclick/erros/comunicacao/: __init__.py  setup.py
dclick/erros/entrada/: __init__.py  setup.py
dclick/erros/execucao/: __init__.py  setup.py
dclick/erros/saida/: __init__.py  setup.py
dclick/erros/sistema/: __init__.py  setup.py
dclick/erros/sustentacao/: __init__.py  setup.py
dclick/holmes/: __init__.py  modelos.py  setup.py
dclick/holmes/webhook/: __init__.py  modelos.py  setup.py
dclick/http/: __init__.py  setup.py
dclick/logger/: setup.py
dclick/nbs/: __init__.py  programa.py
dclick/nbs/nbs_fiscal/: __init__.py  setup.py
dclick/nbs/nbs_fiscal/entradas/: __init__.py  setup.py
dclick/nbs/nbs_fiscal/entradas/incluir_entrada/: __init__.py  setup.py
dclick/nbs/nbs_fiscal/impostos_a_recolher/: __init__.py  setup.py
dclick/nbs/nbs_fiscal/nf_entradas/: __init__.py  setup.py
dclick/nbs/pecas_compras/: __init__.py  setup.py
dclick/nbs/pecas_compras/lista/: __init__.py  setup.py
dclick/nora/: __init__.py  campos.py  modelos.py  setup.py
(+17 files in other folders)
