[project]
name = "dclick"
version = "1.4"
description = "Biblioteca com pacotes padronizados para as ferramentas utilizadas recorrentemente pelos bots da DClick"
requires-python = ">=3.12"
urls = { Homepage = "https://github.com/DCLICK-RPA/dclick-rpa-lib" }
authors = [
  { name = "Alex Lanes Angelo", email = "alex.angelo@dclick.com.br" }
]
dependencies = [
    "bot @ https://github.com/DCLICK-RPA/dclick-rpa-python-bot-lib/releases/download/v4.1/bot-4.1-py3-none-any.whl",
    "uv>=0.8.11",
]

[project.optional-dependencies]
ocr = [
    "bot[ocr]"
]

[build-system]
requires = ["uv_build>=0.8.11,<0.9.0"]
build-backend = "uv_build"

[tool.uv.build-backend]
module-root = ""