[project]
name = "dclick"
version = "2.0"
description = "Biblioteca com pacotes padronizados para as ferramentas utilizadas recorrentemente pelos bots da DClick"
requires-python = ">=3.12"
urls = { Homepage = "https://github.com/DCLICK-RPA/dclick-rpa-lib" }
authors = [
  { name = "Alex Lanes Angelo", email = "alex.angelo@dclick.com.br" }
]
dependencies = [
    "bot @ https://github.com/DCLICK-RPA/dclick-rpa-python-bot-lib/releases/download/v5.0/bot-5.0-py3-none-any.whl",
    "uv>=0.8.11",
]

[project.optional-dependencies]
ocr = [
    "bot[ocr]"
]

[build-system]
requires = ["uv_build>=0.8.11,<0.9.0"]
build-backend = "uv_build"

[tool.uv.build-backend]
module-root = ""